<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:theme="@style/Theme.NoteApp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/signup_linear_layout"
        android:layout_width="@dimen/login_signup_layout_width"
        android:layout_height="@dimen/signup_layout_height"
        android:orientation="vertical"
        android:background="@drawable/bg_signup_blur"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LogInSignUpTitle"
            android:text="@string/signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_first_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            app:errorEnabled="true"
            android:hint="@string/first_name"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_first_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_last_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/last_name"
            app:errorEnabled="true"
            android:layout_marginBottom="5dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_last_name_edit"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            app:errorEnabled="true"
            android:layout_marginBottom="5dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email_edit"
                style="@style/LoginEditText.email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText.password"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        style="@style/DiscoverPlatformButton"
        android:layout_width="@dimen/common_button_width"
        android:layout_height="@dimen/common_button_height"
        android:text="@string/signup"
        app:layout_constraintBottom_toTopOf="@+id/signup_account_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_account_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_check"
        style="@style/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_login_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_login_title"
        style="@style/Login.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signup_account_check" />


</androidx.constraintlayout.widget.ConstraintLayout>