<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:theme="@style/Theme.NoteApp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:background="@drawable/bg_login_blur"
        android:layout_width="@dimen/login_signup_layout_width"
        android:layout_height="@dimen/login_layout_height"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_button">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/LogInSignUpTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            app:errorEnabled="true"
            android:layout_marginBottom="5dp"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit"
                android:backgroundTint="#00085B"
                style="@style/LoginEditText.email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_fields_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/error">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginEditText.password"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/common_button_width"
        android:layout_height="@dimen/common_button_height"
        app:layout_constraintBottom_toTopOf="@+id/return_signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        style="@style/DiscoverPlatformButton"/>

    <TextView
        android:id="@+id/return_signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Login" />

</androidx.constraintlayout.widget.ConstraintLayout>